@@ -1,10 +1,14 @@
 package com.k_int.pushKb;
 
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+import java.util.ArrayList;
 
+import com.k_int.pushKb.services.FileLoaderService;
+import com.k_int.pushKb.transform.model.ProteusSpecSource;
+import com.k_int.pushKb.transform.model.ProteusTransform;
+import com.k_int.pushKb.transform.model.Transform;
+import com.k_int.pushKb.transform.services.TransformService;
+import io.micronaut.json.tree.JsonNode;
+// import io.micronaut.serde.ObjectMapper;
 import org.reactivestreams.Publisher;
 
 import com.k_int.pushKb.model.Destination;
@@ -21,12 +25,11 @@ import com.k_int.pushKb.bootstrap.ConfigBootstrapDestinations.ConfigBootstrapFol
 
 import com.k_int.pushKb.model.Source;
 import com.k_int.pushKb.services.SourceService;
-import com.k_int.taskscheduler.model.DutyCycleTask;
-import com.k_int.taskscheduler.services.ReactiveDutyCycleTaskRunner;
+/*import com.k_int.taskscheduler.model.DutyCycleTask;
+import com.k_int.taskscheduler.services.ReactiveDutyCycleTaskRunner;*/
 import com.k_int.pushKb.interactions.gokb.model.Gokb;
 import com.k_int.pushKb.interactions.gokb.model.GokbSource;
 import com.k_int.pushKb.interactions.gokb.model.GokbSourceType;
-import com.k_int.pushKb.interactions.gokb.storage.GokbRepository;
 
 import com.k_int.pushKb.bootstrap.ConfigBootstrapSources;
 import com.k_int.pushKb.bootstrap.ConfigBootstrapSources.ConfigBootstrapGokb;
@@ -36,7 +39,6 @@ import com.k_int.pushKb.services.PushableService;
 
 import com.k_int.pushKb.bootstrap.ConfigBootstrapPushables;
 
-import io.micronaut.context.env.Environment;
 import io.micronaut.context.event.ApplicationEventListener;
 import io.micronaut.context.event.StartupEvent;
 import jakarta.inject.Singleton;
@@ -48,38 +50,53 @@ import reactor.core.publisher.Mono;
 @Slf4j
 @Singleton
 public class ApplicationStartupListener implements ApplicationEventListener<StartupEvent> {
-	private final Environment environment;
+	// private final ReactiveDutyCycleTaskRunner reactiveDutyCycleTaskRunner;
+	// private final ObjectMapper objectMapper;
+
 	private final DestinationService destinationService;
   private final SourceService sourceService;
 	private final PushableService pushableService;
+	private final TransformService transformService;
 
 	// Config bootstrapping(?)
 	private final ConfigBootstrapSources configBootstrapSources;
 	private final ConfigBootstrapDestinations configBootstrapDestinations;
 	private final ConfigBootstrapPushables configBootstrapPushables;
 
-	// private final ReactiveDutyCycleTaskRunner reactiveDutyCycleTaskRunner;
+
+	// We're bootstrapping these two in for now... I'm not thrilled about this pattern but it will do?
+	private final static String TIPP_TRANSFORM_NAME = "GOKb_TIPP_to_PCI_V1";
+	private final static String TIPP_TRANSFORM_FILE = "GOKBScroll_TIPP_ERM_transformV1.json";
+
+	private final static String PKG_TRANSFORM_NAME = "GOKb_Package_to_Pkg_V1";
+	private final static String PKG_TRANSFORM_FILE = "GOKBScroll_PKG_ERM_transformV1.json";
+
+	private final FileLoaderService fileLoaderService;
 
 	public ApplicationStartupListener(
 		//ReactiveDutyCycleTaskRunner reactiveDutyCycleTaskRunner,
-    Environment environment,
+		// ObjectMapper objectMapper,
+
 		DestinationService destinationService,
 		SourceService sourceService,
 		PushableService pushableService,
-		GokbRepository gokbRepository, // This is obviously implementation specific unlike "source".
+		TransformService transformService,
 		ConfigBootstrapSources configBootstrapSources,
 		ConfigBootstrapDestinations configBootstrapDestinations,
-		ConfigBootstrapPushables configBootstrapPushables
+		ConfigBootstrapPushables configBootstrapPushables,
+		FileLoaderService fileLoaderService
  	) {
-		this.environment = environment;
+		// this.reactiveDutyCycleTaskRunner = reactiveDutyCycleTaskRunner;
+		// this.objectMapper = objectMapper;
+
 		this.destinationService = destinationService;
 		this.sourceService = sourceService;
 		this.pushableService = pushableService;
+		this.transformService = transformService;
 		this.configBootstrapSources = configBootstrapSources;
 		this.configBootstrapDestinations = configBootstrapDestinations;
 		this.configBootstrapPushables = configBootstrapPushables;
-
-		//this.reactiveDutyCycleTaskRunner = reactiveDutyCycleTaskRunner;
+		this.fileLoaderService = fileLoaderService;
 	}
 
 	@Override
@@ -88,6 +105,7 @@ public class ApplicationStartupListener implements ApplicationEventListener<Star
 		log.info("Bootstrapping PushKB - onApplicationEvent");
 			Flux.from(bootstrapSources())
 				.thenMany(Flux.from(bootstrapDestinations()))
+				.thenMany(Flux.from(bootstrapTransforms()))
 				.thenMany(Flux.from(bootstrapPushTasks()))
 			.subscribe();
 
@@ -103,7 +121,7 @@ public class ApplicationStartupListener implements ApplicationEventListener<Star
 			.getGokbs()
 			.stream()
 			.filter(g -> g.getName().equals(configSrc.getGokb()))
-			.collect(Collectors.toList())
+			.toList()
 			.get(0);
 
 		return GokbSource.builder()
@@ -126,7 +144,6 @@ public class ApplicationStartupListener implements ApplicationEventListener<Star
 		return Flux.fromIterable(configBootstrapSources.getGokbsources()).concatMap(src -> {
 			try {
 				GokbSource gkbSource = getGokbSourceFromConfig(src);
-				UUID srcId = GokbSource.generateUUIDFromSource(gkbSource);
 
 				return Mono.from(sourceService.ensureSource(gkbSource));
 			} catch (Exception e) {
@@ -143,7 +160,7 @@ public class ApplicationStartupListener implements ApplicationEventListener<Star
 			.getFoliotenants()
 			.stream()
 			.filter(t -> t.getName().equals(configDest.getFoliotenant()))
-			.collect(Collectors.toList())
+			.toList()
 			.get(0);
 
 		return FolioDestination.builder()
@@ -179,6 +196,47 @@ public class ApplicationStartupListener implements ApplicationEventListener<Star
 		});
 	}
 
+	// FIXME we're bootstrapping the two ProteusTransforms for now as HARDCODED inputs
+	private Publisher<Transform> bootstrapTransforms() {
+		JsonNode tippSpec = fileLoaderService.readJsonFile(TIPP_TRANSFORM_FILE, FileLoaderService.TRANSFORM_SPEC_PATH);
+		JsonNode pkgSpec = fileLoaderService.readJsonFile(PKG_TRANSFORM_FILE, FileLoaderService.TRANSFORM_SPEC_PATH);
+
+		// TIPP transform
+		ProteusTransform tippTransform = ProteusTransform.builder()
+			.id(Transform.generateUUID(TIPP_TRANSFORM_NAME))
+			.source(ProteusSpecSource.STRING_SPEC)
+			.slug(TIPP_TRANSFORM_NAME)
+			.name(TIPP_TRANSFORM_NAME)
+			.spec(tippSpec)
+			//.specFile(TIPP_TRANSFORM_FILE) // Loading transform as file instead
+			.build();
+
+		// PKG Transform
+		ProteusTransform pkgTransform = ProteusTransform.builder()
+			.id(Transform.generateUUID(PKG_TRANSFORM_NAME))
+			.source(ProteusSpecSource.STRING_SPEC)
+			.slug(PKG_TRANSFORM_NAME)
+			.name(PKG_TRANSFORM_NAME)
+			.spec(pkgSpec)
+			//.specFile(PKG_TRANSFORM_FILE) // Loading transform as file instead
+			.build();
+
+		ArrayList<Transform> transforms = new ArrayList<>();
+		transforms.add(tippTransform);
+		transforms.add(pkgTransform);
+
+		return Flux.fromIterable(transforms).concatMap(transform -> {
+			try {
+				// TODO work out whether saveOrUpdate makes sense in DTO world
+				return transformService.saveOrUpdate(transform.getClass(), transform);
+			} catch (Exception e) {
+				log.error("Error bootstrapping transform {}", transform, e);
+				//e.printStackTrace();
+				return Mono.empty();
+			}
+		});
+	}
+
 	private Publisher<PushTask> bootstrapPushTasks() {
 		log.debug("bootstrapPushTasks");
 		//log.info("CONFIG PUSHABLES: {}", configBootstrapPushables);
@@ -188,7 +246,7 @@ public class ApplicationStartupListener implements ApplicationEventListener<Star
 					.getGokbsources()
 					.stream()
 					.filter(s  -> s.getName().equals(pt.getSource()))
-					.collect(Collectors.toList())
+					.toList()
 					.get(0);
 
 				GokbSource src = getGokbSourceFromConfig(configGokbSource);
@@ -197,20 +255,27 @@ public class ApplicationStartupListener implements ApplicationEventListener<Star
 					.getFoliodestinations()
 					.stream()
 					.filter(d  -> d.getName().equals(pt.getDestination()))
-					.collect(Collectors.toList())
+					.toList()
 					.get(0);
 
 				FolioDestination dest = getFolioDestinationFromConfig(configFolioDestination);
 
-				PushTask pushTaskObj = PushTask.builder()
-					.transform(pt.getTransform())
-					.sourceType(GokbSource.class)
-					.sourceId(GokbSource.generateUUIDFromSource(src))
-					.destinationType(FolioDestination.class)
-					.destinationId(FolioDestination.generateUUIDFromDestination(dest))
-					.build();
+				// TODO For now we are simply swapping between the two hard-coded transforms. This will need to be better configured later
+				return Mono.from(transformService.findById(
+					ProteusTransform.class,
+					Transform.generateUUID(src.getGokbSourceType() == GokbSourceType.TIPP ? TIPP_TRANSFORM_NAME : PKG_TRANSFORM_NAME)
+				)).flatMap(transform -> {
+						PushTask pushTaskObj = PushTask.builder()
+							.transformId(transform.getId())
+							.transformType(transform.getClass())
+							.sourceType(GokbSource.class)
+							.sourceId(GokbSource.generateUUIDFromSource(src))
+							.destinationType(FolioDestination.class)
+							.destinationId(FolioDestination.generateUUIDFromDestination(dest))
+							.build();
 
-				return Mono.from(pushableService.ensurePushable(pushTaskObj)).map(PushTask.class::cast);
+						return Mono.from(pushableService.ensurePushable(pushTaskObj)).map(PushTask.class::cast);
+					});
 			} catch (Exception e) {
 				log.error("ERROR BOOTSTRAPPING PUSHTASK {}", pt, e);
 				//e.printStackTrace();
